# backoffice-ordering-system

./: .gitignore  .mise.toml  CLAUDE.md  README.md
.github/workflows/: backend_lint.yml  backend_test.yml  frontend_build.yml  frontend_lint.yml
backend/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: tables.py  ticket.py
backend/app/routers/: messages.py  orders.py  providers.py  tickets.py  users.py
backend/backend/: auth.py  config.py  const.py  db.py  dependencies.py  logger.py  main.py  middleware.py  utils.py
backend/backend/models/: tables.py
backend/backend/routers/: api.py  messages.py  orders.py  providers.py  root.py  users.py
backend/backend/services/: call_whitelabel.py  call_whitelabel_example.py  email_helper.py  email_notifications.py
backend/migrations/: env.py
backend/migrations/versions/: 032678519d9d_initial_migration.py  1647e703f10e_add_pid_to_provider.py  3e2aad494a8a_add_fields_to_order.py  4e277db48be8_add_provider.py  68bf293c6d6d_add_compound_unique_constraint_on_.py  73cdea5500a3_rename_ticket_to_order.py  788193b3e975_add_message_scope.py  8e6045804b24_add_user_order_link.py  a1455ad090ef_add_unique_constraint_to_providers.py  a7a27f6e3190_add_jira_ticket_fields.py  a8fe54069ee1_add_whitelabel_sync_status.py  c71abd22e122_add_user.py  e90cd79638dd_add_orderlog_and_notification_tables.py  fa05fdc82ef7_add_messages.py
backend/scripts/: db.py  utils.py  whitelabel.py
backend/scripts/db/: clear.py  seed.py
backend/tests/: conftest.py  test_api_auth.py
backend/tests/e2e/: conftest.py  test_api_e2e.py
backend/tests/integration/: conftest.py  factories.py  test_auth.py  test_main.py  test_oidc_auth.py
backend/tests/integration/routers/: conftest.py  test_api.py  test_main.py  test_messages.py  test_orders.py  test_providers.py  test_users.py
backend/tests/models/: test_user.py
backend/tests/services/: test_email_notifications.py
backend/tests/unit/: conftest.py  test_utils.py
backend/tests/unit/models/: test_user.py
backend/tests/unit/security/: test_api_auth.py  test_call_whitelabel.py  test_oidc_auth.py  test_security_headers.py
backend/whitelabel_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
backend/whitelabel_client/api/: __init__.py  events_api.py  messages_api.py  oms_api.py  project_items_api.py  projects_api.py
backend/whitelabel_client/models/: __init__.py  error.py  error_error.py  event_index.py  event_read.py  event_read_changes_inner.py  message_index.py  message_read.py  message_read_author.py  message_update.py  message_write.py  message_write_author.py  oms_index.py  oms_read.py  oms_read_trigger.py  oms_read_trigger_authorization.py  project_index.py  project_item_index.py  project_item_read.py  project_item_read_status.py  project_item_update.py  project_read.py  project_read_owner.py
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: config.ts  const.ts  index.css  main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  services.gen.ts  types.gen.ts
frontend/src/components/: ordersTable.tsx  providersTable.tsx  usersTable.tsx
frontend/src/components/common/: defaultError.tsx  defaultTableRender.tsx  fullScreenSpinner.tsx  noAccessWidget.tsx  notFound.tsx  roleTag.tsx  statusTag.tsx
frontend/src/components/common/icons/: ordersIcon.tsx  providersIcon.tsx  userIcon.tsx  usersIcon.tsx
frontend/src/components/layout/: header.tsx  logo.tsx  nav.tsx
frontend/src/components/order/: conversationThread.tsx  orderCard.tsx  ordersTable.tsx
frontend/src/components/provider/: providerCard.tsx  providersTable.tsx
frontend/src/components/user/: userCard.tsx  usersTable.tsx
frontend/src/hooks/: useAppUser.ts
frontend/src/routes/: ErrorPage.tsx  Root.tsx  Tickets.tsx  __root.tsx  _authenticated.tsx  _main.tsx  index.tsx
frontend/src/routes/_authenticated/orders/: $orderId.tsx  index.tsx
frontend/src/routes/_authenticated/providers/: $providerId.tsx  index.tsx
frontend/src/routes/_authenticated/users/: $userId.tsx  index.tsx
frontend/src/routes/_main/: index.tsx
frontend/src/routes/_main/orders/: index.tsx
frontend/src/routes/_main/providers/: index.tsx
frontend/src/routes/_main/users/: index.tsx
