[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "missing-module-docstring, missing-function-docstring, missing-class-docstring, fixme"


[tool.black]
line-length = 120
target-version = ["py312"]


[tool.isort]
profile = "black"
line_length = 120


[tool.bandit]


[tool.poetry]
package-mode = false


[tool.mypy]
strict = "true"



[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.1"
pylint = "^3.3.1"
bandit = "^1.7.10"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
